@@ -11,7 +11,6 @@ import edu.colorado.phet.common.phetgraphics.view.ApparatusPanel2.ChangeEvent;
 import edu.colorado.phet.common.phetgraphics.view.phetgraphics.GraphicLayerSet;
 import edu.colorado.phet.common.phetgraphics.view.phetgraphics.PhetGraphic;
 import edu.colorado.phet.common.phetgraphics.view.phetgraphics.PhetShapeGraphic;
-import edu.colorado.phet.faraday.FaradayConstants;
 import edu.colorado.phet.faraday.collision.CollisionDetector;
 import edu.colorado.phet.faraday.collision.ICollidable;
 import edu.colorado.phet.faraday.model.ACPowerSupply;
@@ -32,7 +31,7 @@ implements SimpleObserver, ICollidable, ApparatusPanel2.ChangeListener {
     // Class data
     //----------------------------------------------------------------------------
     
-    public static boolean DEBUG_DRAW_ELECTROMAGNET_MODEL_SHAPE = false;
+    public static boolean DEBUG_DRAW_ELECTROMAGNET_MODEL_SHAPE = true;
     
     //----------------------------------------------------------------------------
     // Instance data
