@@ -3,6 +3,7 @@ Changes for faraday
 ===============================================================================
 
 DONE:
+3/24/08 - set spacing of pickup coil sample points based on height of magnet
 3/21/08 - promote graphic that displays coil sample points to top-level
 3/21/08 - generalize view of pickup coil sample points to handle variable number of sample points
 3/21/08 - change pickup coil model to store and provide access to sample points
